st_texture_cache_load_from_raw: Don't pointlessly include size in cache key

The texture is independent of the size that the user passed in; so there
is no obvious reason to include the texture in the cache key.

https://bugzilla.gnome.org/show_bug.cgi?id=633595